refactor(ai): simplify vector dimension calculation and clean up App class
- Replace `vectors.get(0)` with `vectors.getFirst()` for improved semantics
- Remove unused `home` endpoint and related annotations in `App`